2007-07-03 Borut Razem <borut.razem AT siol.net>

	* src/mcs51/gen.c, src/avr/gen.c, src/pic/gen.c, src/z80/gen.c,
	  src/pic16/gen.c, src/hc08/gen.c, src/ds390/gen.c: fixed RFE
	  #1746528: SDCC should ignore ':' in inline assembler comments
	* device/include/typeof.h: fixed bug #1747142: typeof.h needs fixing

2007-07-02 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/mcs51/C8051F360.h: fixed bug #1746410, thanks Chris Jones
	* device/lib/mcs51/crtxclear.asm: do not set __XPAGE unconditionally

2007-06-29 Borut Razem <borut.razem AT siol.net>

	* src/SDCCmain.c: fixed bug
	  #1744746: SDCC #4867: broken option --xram-size

2007-06-28 Borut Razem <borut.razem AT siol.net>

	* sim/ucsim/configure.in, sim/ucsim/configure, sim/ucsim/ddconfig_in.h:
	  find out the endianess of host machine for ucsim

2007-06-27 Borut Razem <borut.razem AT siol.net>

	* support/regression/generate-cases.py: corrected the file name
	  in warning
	* configure.in, configure, sdccconf_in.h: find out the endianess of
	  host machine
	* src/SDCC.y: fixed bug #1744146: Crash when compiling array of
	  negative size

2007-06-27 Gudjon I. Gudjonsson <gudjon AT gudjon.org>

	* device/include/mcs51/p89c66x.h: NXP header file, OK to change licence

2007-06-26 Borut Razem <borut.razem AT siol.net>

	* support/regression/generate-cases.py: display warning if function
	  list is empty; implemented more flexible rule for detection of
	  testing functions, allowing return type 'void' in the same line as
	  the function name in the function definition
	* support/regression/tests/bug-1654060.c: corrected test
	* support/librarian/sdcclib.c: fixed warning:
	  format '%s' expects type 'char *', but argument 2 has type 'int'

2007-06-25 Jesus Calvino-Fraga <jesusc at ece.ubc.ca>

	* support/librarian/sdcclib.c: Added feature Requests [1510635]
	  Multiple infiles for sdcclib.

2007-06-20 Erik Petrich <epetrich AT ivorytower.norman.ok.us>