@@ -1,3 +1,9 @@
+2007-07-09 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* src/mcs51/peep.c (isCallerSaveFunc): fixed bug 1749275, thanks Robert
+	  Larice, also handle function pointers
+	* support/regression/tests/bug1749275.c: new, added
+
 2007-07-03 Borut Razem <borut.razem AT siol.net>
 
 	* src/mcs51/gen.c, src/avr/gen.c, src/pic/gen.c, src/z80/gen.c,
